--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "vite": "^4.0.0"
-  }
+  },
+  "description": "JS website chat",
+  "main": "vite.config.js",
+  "author": "Kyule Kelvin",
+  "license": "ISC"
 }
